--- a/ApiAsi/ApiAsi.csproj
+++ b/ApiAsi/ApiAsi.csproj
@@ -230,7 +230,9 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MessengersController.cs" />
     <Compile Include="Controllers\PropostaSubmetidasController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
