--- a/ApiAsi/packages.config
+++ b/ApiAsi/packages.config
@@ -22,6 +22,13 @@
   <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor.pt-br" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core.pt-br" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.pt-br" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.pt-br" version="2.1.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization.pt-br" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
